# EmbeddedLinuxKitchen

./: .gitattributes  README.md
Act-01_Cross-Toolchain/: README.md
Act-02_VirtualSDCard/: README.md
Act-03_UBoot/: README.md
Act-04_UBoot-The-Sequel/: README.md
Act-05_Bonus-Load-ELF-With-UBoot/: -nostdlib  CMakeLists.txt  Makefile  README.md  fazloka.s  kernel7.elf  kernel7.img
Act-05_Bonus-Load-ELF-With-UBoot/asm/: start.s
Act-05_Bonus-Load-ELF-With-UBoot/ld/: linker.ld
Act-05_Bonus-Load-ELF-With-UBoot/src/: main.c
Act-06_UBoot-Is-Unbreakable/: README.md  Rpi3B-bootscript  uboot-script.txt  uboot.env
Act-07_Golden-Kernel/: README.md
Act-07_Golden-Kernel/Part01_StaticIP-In-The-Shadows/: README.md
Act-07_Golden-Kernel/Part02_Bootable-Kernel-Is-Paniiiik/: README.md  Rpi3B-bootscript  uboot-script.txt
Act-07_Golden-Kernel/Part03_Init-Process-Requiem/: README.md  dash
Act-07_Golden-Kernel/Part04_Feeling-The-Bootflow/: README.md
Act-08_Do-You-Believe-in-initrd/: README.md
Act-08_Do-You-Believe-in-initrd/rootramfs/: syscall-trial
Act-09_Root-of-All-Problems/: README.md
Act-09_Root-of-All-Problems/rootramfs/: rootramfs.cpio
Act-10_Buildroot-At-A-Reasonable-Price/: README.md
OVA-01_Thus-Spoke-The-Kernel/: Makefile  README.md  rootramfs.cpio  syscall-trial.s
OVA-02_OH-MY-GUI/: Makefile
OVA-02_OH-MY-GUI/src/: gui.c
OVA-03_Rootfs-Over-The-Network/: README.md
RPi3B_BootPartitionContents/: bcm2837-rpi-3-b-plus.dtb  blinky.img  config.txt  rootramfs.cpio  start.elf  uboot.env
RPi3B_BootPartitionContents/extlinux/: extlinux.conf
RPi3B_BootPartitionContents/overlays/: ads1115.dtbo  ads7846.dtbo  adv7282m.dtbo  adv728x-m.dtbo  arducam-64mp.dtbo  arducam-pivariety.dtbo  (+63 more)
(+39 files in other folders)
